--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "npx prisma generate && node index.js",
+    "dev": "node --watch index.js",
+    "deploy": "npx prisma generate && npx prisma migrate deploy && node index.js"
   },
   "dependencies": {
     "telegraf": "^4.16.3",
